// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaRating custom length 1`] = `
<div class="va-rating">
  <div class="va-rating__item-wrapper">
    <va-rating-item-stub value="0" fillediconname="star" halficonname="star_half" emptyiconname="star_empty" tabindex="0" size=""></va-rating-item-stub>
    <va-rating-item-stub value="0" fillediconname="star" halficonname="star_half" emptyiconname="star_empty" tabindex="0" size=""></va-rating-item-stub>
    <va-rating-item-stub value="0" fillediconname="star" halficonname="star_half" emptyiconname="star_empty" tabindex="0" size=""></va-rating-item-stub>
  </div>
  <!---->
</div>
`;

exports[`VaRating default 1`] = `
<div class="va-rating">
  <div class="va-rating__item-wrapper">
    <va-rating-item-stub value="0" fillediconname="star" halficonname="star_half" emptyiconname="star_empty" tabindex="0" size=""></va-rating-item-stub>
    <va-rating-item-stub value="0" fillediconname="star" halficonname="star_half" emptyiconname="star_empty" tabindex="0" size=""></va-rating-item-stub>
    <va-rating-item-stub value="0" fillediconname="star" halficonname="star_half" emptyiconname="star_empty" tabindex="0" size=""></va-rating-item-stub>
    <va-rating-item-stub value="0" fillediconname="star" halficonname="star_half" emptyiconname="star_empty" tabindex="0" size=""></va-rating-item-stub>
    <va-rating-item-stub value="0" fillediconname="star" halficonname="star_half" emptyiconname="star_empty" tabindex="0" size=""></va-rating-item-stub>
  </div>
  <!---->
</div>
`;

exports[`VaRating numbers 1`] = `
<div class="va-rating">
  <div class="va-rating__item-wrapper">
    <va-rating-item-stub value="0" fillediconname="star" halficonname="star_half" emptyiconname="star_empty" tabindex="0" size="" class="va-rating__number-item"></va-rating-item-stub>
    <va-rating-item-stub value="0" fillediconname="star" halficonname="star_half" emptyiconname="star_empty" tabindex="0" size="" class="va-rating__number-item"></va-rating-item-stub>
    <va-rating-item-stub value="0" fillediconname="star" halficonname="star_half" emptyiconname="star_empty" tabindex="0" size="" class="va-rating__number-item"></va-rating-item-stub>
    <va-rating-item-stub value="0" fillediconname="star" halficonname="star_half" emptyiconname="star_empty" tabindex="0" size="" class="va-rating__number-item"></va-rating-item-stub>
    <va-rating-item-stub value="0" fillediconname="star" halficonname="star_half" emptyiconname="star_empty" tabindex="0" size="" class="va-rating__number-item"></va-rating-item-stub>
  </div>
  <!---->
</div>
`;
